#ifndef ASSIGNMENT2_ELEVATORSTATE_H
#define ASSIGNMENT2_ELEVATORSTATE_H

/**
 * @brief Defines the set of possible states for an elevator
 */
enum class ElevatorState {
    STOPPED,
    STOPPING,
    MOVING_UP,
    MOVING_DOWN
};

#endif //ASSIGNMENT2_ELEVATORSTATE_H
